--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "chartist": "0.10.1",
+    "crypto-js": "^3.1.9-1",
     "debug": "^3.2.6",
     "history": "4.7.2",
     "moment": "2.22.1",
-    "node-sass-chokidar": "1.2.2",
+    "node-sass-chokidar": "^1.3.5",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
+    "query-string": "^6.8.2",
     "react": "^16.4.1",
     "react-big-calendar": "0.18.0",
     "react-bootstrap-sweetalert": "4.2.3",
@@ -26,7 +28,7 @@
     "react-nouislider": "2.0.1",
     "react-number-format": "^3.3.4",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.1.1",
     "react-spinners": "^0.5.4",
     "react-swipeable-views": "0.12.13",
     "react-switch": "^5.0.0",
@@ -45,5 +47,17 @@
     "eject": "react-scripts eject",
     "deploy": "npm run build"
   },
-  "homepage": "/workbench/"
+  "homepage": "/workbench/",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
